backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: sa-migration
      containers:
        - name: backend-container
          image: registry.digitalocean.com/gameshop/gameshop-backend:v7
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-logs
              mountPath: ./app/logs
            - name: backend-secrets
              mountPath: ./app/secrets.yml
              subPath: secrets.yml
            - name: backend-config
              mountPath: ./app/config.yml
              subPath: config.yml

        - name: filebeat
          image: docker.elastic.co/beats/filebeat:8.10.2
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/share/filebeat/logs
            - name: filebeat-config
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml

      volumes:
        - name: shared-logs
          emptyDir: { }
        - name: filebeat-config
          configMap:
            name: filebeat-config
        - name: backend-config
          configMap:
            name: backend-config
        - name: backend-secrets
          secret:
            secretName: backend-secrets


---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP  # Change to NodePort or LoadBalancer as needed
